# InstrumentCluster

./: .gitattributes  .gitignore  CMakeLists.txt  Main.qml  README.md  resources.qrc
Controllers/: indicators.cpp  indicators.h  lightcontrol.cpp  lightcontrol.h  readingscommportal.cpp  readingscommportal.h  system.cpp  system.h
InstrumentCluster/: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
InstrumentCluster/Controllers/: indicators.cpp  indicators.h  lightcontrol.cpp  lightcontrol.h  readingscommportal.cpp  readingscommportal.h
InstrumentCluster/ui/BottomLine/: BottomLine.qml
InstrumentCluster/ui/CarModel/: CarModel.qml
InstrumentCluster/ui/CarSpeed/: CarSpeed.qml
InstrumentCluster/ui/FooterBar/: FooterBar.qml
InstrumentCluster/ui/GearShiftBar/: GearShiftBar.qml
InstrumentCluster/ui/Indicators/: Indicators.qml
InstrumentCluster/ui/LightControlBar/: LightControlBar.qml
InstrumentCluster/ui/MainScreen/: MainScreen.qml
InstrumentCluster/ui/Speed/: Speed.qml
InstrumentCluster/ui/SpeedUnit/: SpeedUnit.qml
InstrumentCluster/ui/SpeedometerPlusSign/: SpeedometerPlusSign.qml
InstrumentCluster/ui/ThemeSettings/: ThemeSettings.qml
InstrumentCluster/ui/TopBar/: TopBar.qml
InstrumentCluster/ui/assets/: Light_Theme.json
README_Assets/: socket_demo.mkv
SocketTest/: socket_test.py
ui/BottomLine/: BottomLine.qml
ui/CarModel/: CarModel.qml
ui/GearShiftBar/: GearShiftBar.qml
ui/IconButton/: IconButton.qml
ui/Indicators/: Indicators.qml
ui/LightControlBar/: LightControlBar.qml
ui/Logo/: Logo.qml
ui/MainScreen/: MainScreen.qml
ui/Speed/: Speed.qml
ui/SpeedometerPlusSign/: SpeedometerPlusSign.qml
ui/StyleTheme/: StyleTheme.qml
ui/TopBar/: TopBar.qml
ui/assets/: Dark_Theme.json  Dark_Theme.webm  Light_Theme.webm
